--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "symfony/web-link": "7.4.*",
         "symfony/yaml": "7.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/string-extra": "^3.22",
         "twig/twig": "^2.12|^3.0",
         "web-token/jwt-framework": "^4.1"
     },
