laison entre medecin et secretaire

--- a/.env
+++ b/.env
@@ -45,5 +45,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+
+MAILER_DSN=smtp://189a53ec64f7a3:TON_MOT_DE_PASSE@sandbox.smtp.mailtrap.io:2525
+
 ###< symfony/mailer ###
