--- a/.env
+++ b/.env
@@ -41,11 +41,12 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/medical_new?serverVersion=8.0&charset
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+#MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
 
-MAILER_DSN=smtp://189a53ec64f7a3:TON_MOT_DE_PASSE@sandbox.smtp.mailtrap.io:2525
+MAILER_DSN=smtp://189a53ec64f7a3:2473eb27e1ef73@sandbox.smtp.mailtrap.io:2525?sync=true
 
 ###< symfony/mailer ###
